--- a/workspace/dpro/Dic_cafe-master/index.html
+++ b/workspace/dpro/Dic_cafe-master/index.html
@@ -4,40 +4,27 @@
 <head>
   <meta charset="utf-8">
   <title>DIC cafe</title>
-  <link rel="stylesheet" href="CSS/normalize.css">
-  <link href="CSS/main.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,200&family=Open+Sans:ital@1&display=swap"
-    rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header id="top">
+  <header>
     <nav class="header_nav">
-      <a href="index.html" class="logo">
-        <img src="images/sample_logo_k.png">
-      </a>
+      <a href="index.html" class="logo"><img src="images/sample_logo_k.png"></a>
       <ul class="global_nav">
-        <a href="index.html" class="global_nav_item">
-          <li> Home</li>
-        </a>
-        <a href="#" class="global_nav_item">
-          <li>Menu</li>
-        </a>
-        <a href="contact.html" class="global_nav_item">
-          <li>Contact</li>
-        </a>
+        <a href="index.html" class="global_nav_item"><li>Home</li></a>
+        <a href="#menu" class="global_nav_item"><li>Menu</li></a>
+        <a href="#" class="global_nav_item"><li>Contact</li></a>
       </ul>
     </nav>
     <div class="key section_inner">
-      <div class="content-container">
-        <h1>DIC Coffee</h1>
-        <p>natural organic cafe</p>
-      </div>
+      <h1>DIC Coffee</h1>
+      <p>natural organic cafe</p>
     </div>
   </header>
+
   <section>
     <!---->
     <article class="section_inner">
@@ -45,27 +32,37 @@
         <h1>CONCEPT</h1>
         <p>El compromiso de DIC Coffee</p>
       </div>
-      <div class="content">
-        <p>
-          DIC Coffee usa granos de café de Rwanda<strong>"Frijoles DIC"</strong>usando。<br>
-          Adquirido de caficultores contratados directamente。<br>
-          Es una taza en la que puedes sentir la dulzura afrutada en la acidez y la riqueza bien equilibradas.
-          Por
-          todos los medios, una copa de discernimiento
-          Por favor, disfruta。<br>
-          <small>※El café es operado por Daivic Co., Ltd. bajo contrato con la granja.。</small>
+      <div class="concept_inner">
+        <p class="concept_content">
+          El café de DIC Coffee procede de Ruanda<strong>'Alubias DIC'.</strong>con lo siguiente.<br>
+          Nuestro café procede directamente de caficultores contratados.<br>
+          Se trata de una taza con una acidez y riqueza equilibradas, con un dulzor afrutado. Disfrute de una taza de
+          nuestra especialidad.
+          Disfrútalo.<br>
+          <small>※DIC Cafe está contratado y gestionado por Daibic Ltd. con la granja.</small>
         </p>
-        <img src="images/sample_concept.jpg" width="300rem">
+        <img src="images/sample_concept.jpg" class="concept_image">
       </div>
     </article>
     <!---->
-    <article class="section_inner articleMenu">
-      <h1 class="section_title">MENU</h1>
+
+    <!---->
+    <article class="section_inner menu_section">
+
+      <div class="section_title">
+        <h1>MENU</h1>
+      </div>
+
+      <!---->
       <section>
         <div class="center">
           <h1 class="menu_title">Recommended menu</h1>
         </div>
+
+        <!---->
         <ul class="horizontal-list">
+
+          <!---->
           <li>
             <img src="images/sample_pancake1.jpg" width="55%" class="pancake-image">
             <div class="pancake-content">
@@ -74,6 +71,9 @@
               <p class="price">1.200Gs</p>
             </div>
           </li>
+          <!---->
+
+          <!---->
           <li>
             <img src="images/sample_pancake2.jpg" width="55%" class="pancake-image">
             <div class="pancake-content">
@@ -82,82 +82,103 @@
               <p class="price"> 1.300Gs</p>
             </div>
           </li>
+          <!---->
+
         </ul>
+
       </section>
+      <!---->
+
+      <!---->
       <section>
+
         <div class="center">
           <h1 class="menu_title">Coffee menu</h1>
         </div>
-        <ul class="menu-list">
-          <li class="menu-item">
-            <img src="images/sample_cafe1.jpg" class="coffee_menu_image">
-            <div class="menu-details">
-              <h2>Café mezclado</h2>
-              <p>400Gs</p>
-            </div>
-          </li>
-          <li class="menu-item">
-            <img src="images/sample_cafe2.jpg" class="coffee_menu_image">
-            <div class="menu-details">
-              <h2>Arte Latte</h2>
-              <p>500Gs</p>
-            </div>
-          </li>
-          <li class="menu-item">
-            <img src="images/sample_cafe3.jpg" class="coffee_menu_image">
-            <div class="menu-details">
-              <h2>Café con leche</h2>
-              <p>450Gs</p>
-            </div>
-          </li>
-          <li class="menu-item">
-            <img src="images/sample_cafe4.jpg" class="coffee_menu_image">
-            <div class="menu-details">
-              <h2>Café helado</h2>
-              <p>350Gs</p>
-            </div>
-          </li>
+
+        <!---->
+        <ul class="menu_list coffee_menu">
+          <div class="coffee_side">
+            <li class="caffee_menu_list_item">
+              <img src="images/sample_cafe1.jpg" class="caffee_menu_image">
+              <div class="caffee_menu_content">
+                <h2 class="menu_item_title">Café mezclado</h2>
+                <p class="caffee_menu_price">400Gs</p>
+              </div>
+            </li>
+            <li class="caffee_menu_list_item">
+              <img src="images/sample_cafe2.jpg" class="caffee_menu_image">
+              <div class="caffee_menu_content">
+                <h2 class="menu_item_title">Arte Latte</h2>
+                <p class="caffee_menu_price">500Gs</p>
+              </div>
+
+            </li>
+          </div>
+          <!---->
+
+          <!---->
+          <div class="coffee_side">
+            <li class="caffee_menu_list_item">
+              <img src="images/sample_cafe3.jpg" class="caffee_menu_image">
+              <div class="caffee_menu_content">
+                <h2 class="menu_item_title">Café con leche</h2>
+                <p class="caffee_menu_price">450Gs</p>
+              </div>
+            </li>
+            <li class="caffee_menu_list_item">
+              <img src="images/sample_cafe4.jpg" class="caffee_menu_image">
+              <div class="caffee_menu_content">
+                <h2 class="menu_item_title">Café helado</h2>
+                <p class="caffee_menu_price">350Gs</p>
+              </div>
+            </li>
+          </div>
+          <!---->
+
         </ul>
+        <!---->
+
       </section>
+      <!---->
     </article>
-    <!---->
-    <article class="section_inner">
+
+    <article class="section_inner acceso">
       <div class="section_title">
         <h1>ACCESS</h1>
         <p>Información de la tienda</p>
       </div>
       <div class="access-content">
-        <div class="menu">
-          <dl>
-            <dt>Horario de apertura</dt>
-            <dd>10:00 - 19:00<br>Cerrado los jueves</dd>
-          </dl>
-          <dl>
-            <dt>Dirección</dt>
-            <dd>
-              Oba Building A, 28-4, Maruyama-cho, Shibuya-ku, Tokio 150-0044, Japón<br>
-              TEL: 03-5459-1808
-            </dd>
-          </dl>
-        </div>
+        <dl>
+          <dt>Horario de apertura</dt>
+          <dd>10:00 - 19:00<br>Cerrado los jueves</dd>
+        </dl>
+        <dl>
+          <dt>Dirección</dt>
+          <dd>
+            Oba Building A, 28-4, Maruyama-cho, Shibuya-ku, Tokio 150-0044, Japón<br>
+            TEL: 03-5459-1808
+          </dd>
+        </dl>
       </div>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d529.1112083856162!2d29.98381513346934!3d36.258715876075584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14c1f33fb007ffeb%3A0xf99a1032a6f73de1!2sLycian%20Rock-Cut%20Tombs%20of%20Myra!5e0!3m2!1ses-419!2spy!4v1696978502419!5m2!1ses-419!2spy"
         width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
     </article>
   </section>
   <footer>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Menu</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#">Contact</a></li>
         <li><a href="index.html"><img src="images/sample_logo_w.png"></a></li>
       </ul>
     </nav>
     <div class="copyright">
-      <p>&copy; DIVIC Corp. All RIGHTS RESERVED.</p>
+      <p>© DIVIC Corp. All RIGHTS RESERVED.</p>
     </div>
   </footer>
 </body>
